--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,9 @@
     <title>The David Oyeyemi Portfolio</title>
   </head>
   <body>
-        <div id="root"></div>
+        <div id="root">
+          <p>Yoooooooo</p>
+        </div>
         <style>
           body {
             background-color: black;
