--- a/public/index.html
+++ b/public/index.html
@@ -18,13 +18,11 @@
     <title>The David Oyeyemi Portfolio</title>
   </head>
   <body>
-        <div id="root">
-          <p>Yoooooooo</p>
-        </div>
-        <style>
+        <div id="root"></div>
+        <!-- <style>
           body {
             background-color: black;
           }
-        </style>
+        </style> -->
   </body>
 </html>
