--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
     </head>
     <body>
         <div id="root"></div>
-        <style>body{background-color:#000}</style>
+        <style>
+            body {
+                background-color:#000;
+            }
+        </style>
     </body>
 </html>
